tests/fail/16_infinite_recursion.lang
// ОЖИДАЕТСЯ ОШИБКА: превышен лимит глубины рекурсии
функция рекурсия() : пусто {
    рекурсия();
}

функция Начало() : целое {
    рекурсия();
    вернуть 0;
}
